<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="sp4rk.in.tipcalculator.PizzaActivity"
                tools:showIn="@layout/activity_restaurant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CustomTextView"
                android:text="@string/original_total"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaEditText"
                style="@style/EditableEditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp">
            <RadioGroup
                android:id="@+id/serviceRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/poorRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poor"/>
                <RadioButton
                    android:id="@+id/commonRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common"/>
                <RadioButton
                    android:id="@+id/excellentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excellent"/>
            </RadioGroup>
        </LinearLayout>
        <CheckBox
            android:id="@+id/badWeatherCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/bad_weather"/>
        <CheckBox
            android:id="@+id/reallyBadWeatherCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/really_bad_weather"/>
        <CheckBox
            android:id="@+id/threeMileCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/more_than_3_miles"/>
        <CheckBox
            android:id="@+id/fiveMileCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/more_than_5_miles"/>
        <CheckBox
            android:id="@+id/minimumCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/minimum_tipping"/>
        <CheckBox
            android:id="@+id/largeOrderCheckbox"
            style="@style/CheckboxLayoutStyle"
            android:text="@string/large_order"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CustomTextView"
                android:text="@string/total_tip"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaTipEditText"
                style="@style/NonEditableEditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CustomTextView"
                android:text="@string/grand_total"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaTotalEditText"
                style="@style/NonEditableEditText"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>